GNOME Bugzilla – Bug 671525
Option to configure SSH key for secure shell is sometimes not visible
Last modified: 2012-03-09 13:54:14 UTC
When I select an SSH key and right click or open the Remote menu, the option "Configure Key for Secure Shell" is supposed to appear. With Seahorse 3.3.5, the option does not always appear when I select an SSH key. I haven't been able to figure out exactly when this happens, but here's one way that seems to happen every time… Steps to reproduce: - Start Seahorse. - Select an SSH key. Right click it, note that it the appropriate menu appears. - With that key still selected, do a search where it will still be visible. For example, type "ssh" in the search box. - Right click the (still selected) SSH key again. The menu will only contain Delete and Properties. - Note that right clicking no longer seems to select the key under the cursor. Perhaps this is related? Those steps are a little contrived, but I have actually encountered this quite consistently, to the point where I feel it is a serious problem. It seems to be particularly common with View By Keyring enabled. If I find some other steps to reproduce, I will update accordingly.
Created attachment 209286 [details] gnome-keying-3-3-5-ubuntu-build.log When I booted into Fedora 17 this week to have a look, I couldn't reproduce this bug, but I get it every time in Ubuntu. There isn't some extra run-time dependency we're missing, is there?
Okay, so there's another issue that clicking "Configure Key for Secure Shell" isn't actually doing anything with the version in Ubuntu right now, and I'd assumed it to be a separate bug. Perhaps these problems are related, and the issue with the menus is reversed? (Option is appearing when it shouldn't be?)
I can reproduce. Ran out of time last night, will look at it again.
Fixed in git master: commit bad4930e1f26957ac9024befd93b57c5ca105392 Author: Stef Walter <stefw@gnome.org> Date: Fri Mar 9 14:50:49 2012 +0100 Fix regression of configure key action * Make sure it's displayed at the right times * Fix selection of which key is uploaded https://bugzilla.gnome.org/show_bug.cgi?id=671525