Fix regression of configure key action

* Make sure it's displayed at the right times
 * Fix selection of which key is uploaded

https://bugzilla.gnome.org/show_bug.cgi?id=671525